Adapting code to Kafka 4 API